--- a/task1/.github/workflows/ci.yml
+++ b/task1/.github/workflows/ci.yml
@@ -2,25 +2,21 @@ name: CI
 
 on:
   push:
-    branches: ["**"]
   pull_request:
 
 jobs:
   test:
-    runs-on: ubuntu-latest #
-    strategy:
-      matrix:
-        python-version: ["3.11"]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install deps
+          python-version: "3.10"
+      - name: Install
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -e .
-      - name: Run tests
-        run: pytest -q
+      - name: Test
+        run: |
+          pytest -q
