--- a/task1/pyproject.toml
+++ b/task1/pyproject.toml
@@ -1,17 +1,16 @@
-
 [build-system]
 requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "kontakt-qc"
+name = "qc_service"
 version = "0.1.0"
-description = "Kontakt Home call quality scoring prototype (Task1)"
+description = "Kontakt Home Task 1 - Quality Control prototype"
 requires-python = ">=3.10"
 dependencies = []
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
 [tool.setuptools.packages.find]
 where = ["src"]
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
