--- a/task1/requirements.txt
+++ b/task1/requirements.txt
@@ -1,3 +1,8 @@
-pytest>=7.0
+fastapi>=0.110
+uvicorn[standard]>=0.27
+pydantic>=2.6
+python-dotenv>=1.0
 PyYAML>=6.0
-requests>=2.31
+httpx>=0.27
+
+pytest>=7.0
